# dat_service_lib

./: .gitignore  LICENSE  README.md  a.py  b.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
dat_service_lib/: __init__.py
dat_service_lib/adapters/config/: settings.py
dat_service_lib/adapters/messaging/: alert_adapters.py
dat_service_lib/adapters/observability/: logging.py
dat_service_lib/adapters/persistence/: in_memory_repo.py  postgres_repo.py
dat_service_lib/core/domain/: exceptions.py  models.py  validators.py
dat_service_lib/core/ports/: interfaces.py
dat_service_lib/core/services/: sensor_service.py
dat_service_lib/utils/: resilience.py
examples/: run_demo.py
tests/: conftest.py
tests/unit/: test_sensor_service.py
